[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyintegration"
version = "0.0.2"
authors = [
  { name="Rick W. Porter", email="rickwporter@gmail.com" },
]
description = "Python integration test framework"
readme = "README.md"
# NOTE: probably works with older Python versions, but not tested there
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "docker (~=6.0.1)",
]

[project.urls]
"Homepage" = "https://github.com/rickwporter/pyintegration"

[tool.setuptools.packages.find]
exclude = ["example*", "tests*"]
